--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vuemp3player",
-  "short_name": "vuemp3player",
+  "name": "iv2shulte",
+  "short_name": "iv2shulte",
   "icons": [
     {
       "src": "./img/icons/iv2-128x128.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "./index.html",
   "display": "fullscreen",
-  "background_color": "#7e22a1",
-  "theme_color": "#7e22a1"
+  "background_color": "#323232",
+  "theme_color": "#323232"
 }
