to version 0.1.1 fixed error to router and fixed error to service-worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "short_name": "iv2shulte",
   "icons": [
     {
-      "src": "./img/icons/iv2-128x128.png",
+      "src": "https://ivanshavliuga.github.io/shulte2/img/icons/iv2-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "./img/icons/iv2-512x512.png",
+      "src": "https://ivanshavliuga.github.io/shulte2/img/icons/iv2-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "https://ivanshavliuga.github.io/shulte2/index.html",
   "display": "fullscreen",
-  "background_color": "#323232",
-  "theme_color": "#323232"
+  "background_color": "#232323",
+  "theme_color": "#333333"
 }
