--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "pinia": "^2.1.4",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13"
   },
@@ -27,7 +28,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-pinia": "~0.2.4"
   },
   "eslintConfig": {
     "root": true,
